8215100: AArch64: fix compareTo intrinsic with four-character Latin/Unicode

Reviewed-by: aph, dpochepk